force-app/main/default/objects/searchCategories__c/searchCategories__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sauvegarde des catégories des champs pour la recherche sur les objets contact, compte, chantier et projet</description>
    <label>Recherche - Catégories</label>
</CustomObject>