force-app/main/default/objects/searchCategories__c/fields/categorie__c.field-meta.xml
<CustomField>
    <fullName>categorie__c</fullName>
    <description>CRM-449 : Catégorie du champ</description>
    <label>Catégorie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>