force-app/main/default/objects/searchCategories__c/fields/champ__c.field-meta.xml
<CustomField>
    <fullName>champ__c</fullName>
    <description>CRM-449 : Nom API du champ à catégoriser</description>
    <label>Champ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>