force-app/main/default/objects/searchCategories__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>champ__c</columns>
    <columns>objet__c</columns>
    <columns>categorie__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>